force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <label>Book</label>
    <nameField>
        <displayFormat>B-{00}</displayFormat>
        <label>BNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>