force-app/main/default/objects/Book__c/fields/BName__c.field-meta.xml
<CustomField>
    <fullName>BName__c</fullName>
    <label>BName</label>
    <length>210</length>
    <type>Text</type>
</CustomField>