force-app/main/default/objects/Book__c/fields/Book_Count__c.field-meta.xml
<CustomField>
    <fullName>Book_Count__c</fullName>
    <label>Book Count</label>
    <summaryForeignKey>Book_History__c.RelB__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>